First implementation of book preview
Added a webview and some code to paginate pages of a default text

--- a/data/meson.build
+++ b/data/meson.build
@@ -58,6 +58,7 @@ blueprints = custom_target(
 		'ui/editor.blp',
 		'ui/editor_writing.blp',
 		'ui/editor_plotting.blp',
+		'ui/editor_formatting.blp',
 		'ui/library.blp',
 		'ui/manuscript.blp',
 		'ui/window.blp',
