Save and load from HTML
Switched to using HTML to save scenes

--- a/scriptorium/meson.build
+++ b/scriptorium/meson.build
@@ -29,7 +29,8 @@ scriptorium_sources = [
   'editor_formatting.py',
   'scene.py',
   'library.py',
-  'model.py'
+  'model.py',
+  'utils.py'
 ]
 
 install_data(scriptorium_sources, install_dir: moduledir)
