Reworked the library

--- a/data/meson.build
+++ b/data/meson.build
@@ -59,8 +59,8 @@ blueprints = custom_target(
 		'ui/editor_writing.blp',
 		'ui/editor_plotting.blp',
 		'ui/editor_formatting.blp',
-		'ui/library.blp',
-		'ui/manuscript.blp',
+		'ui/library/library.blp',
+		'ui/library/manuscript.blp',
 		'ui/window.blp',
 		'ui/scene.blp',
 	),
