Added drag and drop
Implemented seeing the plot and being able to drag and drop cards, also changed the style of the scene cards

--- a/data/meson.build
+++ b/data/meson.build
@@ -63,6 +63,7 @@ blueprints = custom_target(
 		'ui/library/manuscript.blp',
 		'ui/window.blp',
 		'ui/scene.blp',
+		'ui/chapter_column.blp',
 	),
 	output: '.',
 	command: [
