Change code org
Try to split code unto more sub directories

--- a/data/meson.build
+++ b/data/meson.build
@@ -55,10 +55,10 @@ blueprints = custom_target(
 	'blueprints',
 	input: files(
 		'gtk/help-overlay.blp',
-		'ui/editor.blp',
-		'ui/editor_writing.blp',
-		'ui/editor_plotting.blp',
-		'ui/editor_formatting.blp',
+		'ui/editor/editor.blp',
+		'ui/editor/writing.blp',
+		'ui/editor/plotting.blp',
+		'ui/editor/formatting.blp',
 		'ui/library/library.blp',
 		'ui/library/manuscript.blp',
 		'ui/window.blp',
