--- a/scriptorium/meson.build
+++ b/scriptorium/meson.build
@@ -23,11 +23,11 @@ scriptorium_sources = [
   '__init__.py',
   'main.py',
   'window.py',
-  'editor.py',
-  'editor_writing.py',
-  'editor_plotting.py',
-  'editor_formatting.py',
-  'scene.py',
+  'editor/editor.py',
+  'editor/writing.py',
+  'editor/plotting.py',
+  'editor/formatting.py',
+  'editor/scene.py',
   'chapter_column.py',
   'library/library.py',
   'library/manuscript.py',
