Add plotting panels in code
Moved all the panel loading as code to make it easier to add all the panels to come (places, props, etc)

--- a/data/meson.build
+++ b/data/meson.build
@@ -58,6 +58,7 @@ blueprints = custom_target(
 		'ui/editor/editor.blp',
 		'ui/editor/writing.blp',
 		'ui/editor/plotting.blp',
+		'ui/editor/plotting_overview.blp',
 		'ui/editor/formatting.blp',
 		'ui/library/library.blp',
 		'ui/library/manuscript.blp',
