Overall re-design
Changed how the UI works and also moved the blp files back next to the code

--- a/scriptorium/meson.build
+++ b/scriptorium/meson.build
@@ -1,7 +1,6 @@
 pkgdatadir = get_option('prefix') / get_option('datadir') / meson.project_name()
 moduledir = pkgdatadir / 'scriptorium'
 gnome = import('gnome')
-
 python = import('python')
 
 conf = configuration_data()
@@ -11,30 +10,67 @@ conf.set('localedir', get_option('prefix') / get_option('localedir'))
 conf.set('pkgdatadir', pkgdatadir)
 
 configure_file(
-  input: 'scriptorium.in',
-  output: 'scriptorium',
-  configuration: conf,
-  install: true,
-  install_dir: get_option('bindir'),
-  install_mode: 'r-xr-xr-x'
+	input: 'scriptorium.in',
+	output: 'scriptorium',
+	configuration: conf,
+	install: true,
+	install_dir: get_option('bindir'),
+	install_mode: 'r-xr-xr-x',
 )
 
 scriptorium_sources = [
-  '__init__.py',
-  'main.py',
-  'window.py',
-  'editor/editor.py',
-  'editor/writing.py',
-  'editor/plotting.py',
-  'editor/plotting_entity.py',
-  'editor/plotting_overview.py',
-  'editor/formatting.py',
-  'editor/scene.py',
-  'chapter_column.py',
-  'library/library.py',
-  'library/manuscript.py',
-  'model.py',
-  'utils.py'
+	'__init__.py',
+	'main.py',
+	'window.py',
+	'model.py',
+	'utils.py',
+	'globals.py',
+	'editor/editor.py',
+	'editor/editor_entity.py',
+	'editor/editor_overview.py',
+	'editor/editor_formatting.py',
+	'editor/editor_writing.py',
+	'editor/writing.py',
+	'editor/plotting.py',
+	'editor/scene.py',
+	'editor/chapter_column.py',
+	'library/library.py',
+	'library/manuscript.py',
 ]
+
+blueprints = custom_target(
+	'blueprints',
+	input: files(
+		'editor/chapter_column.blp',
+		'editor/editor.blp',
+		'editor/editor_entity.blp',
+		'editor/editor_formatting.blp',
+		'editor/editor_overview.blp',
+		'editor/editor_writing.blp',
+		'editor/plotting.blp',
+		'editor/scene.blp',
+		'editor/writing.blp',
+		'library/library.blp',
+		'library/manuscript.blp',
+		'window.blp',
+	),
+	output: '.',
+	command: [
+		find_program('blueprint-compiler'),
+		'batch-compile',
+		'@OUTPUT@',
+		'@CURRENT_SOURCE_DIR@',
+		'@INPUT@',
+	],
+)
+
+gnome.compile_resources(
+	'scriptorium',
+	'scriptorium.gresource.xml',
+	gresource_bundle: true,
+	install: true,
+	install_dir: pkgdatadir,
+	dependencies: blueprints,
+)
 
 install_data(scriptorium_sources, install_dir: moduledir)
