--- a/scriptorium/views/meson.build
+++ b/scriptorium/views/meson.build
@@ -2,8 +2,11 @@ scriptorium_sources_views = [
 	'__init__.py',
 	'library.py',
 	'editor.py',
+	'editor_chapters.py',
 	'editor_scenes.py',
 	'editor_scenes_details.py',
+	'editor_formatting.py',
 	'editor_overview.py',
+	'editor_manuscript.py',
 ]
 install_data(scriptorium_sources_views, install_dir: moduledir / 'views')
