Implemented deleting a manuscript

--- a/scriptorium/views/meson.build
+++ b/scriptorium/views/meson.build
@@ -6,6 +6,7 @@ scriptorium_sources_views = [
 	'editor_scenes.py',
 	'editor_scenes_details.py',
 	'editor_formatting.py',
+	'editor_entities.py',
 	'editor_overview.py',
 	'editor_manuscript.py',
 ]
