--- a/scriptorium/widgets/meson.build
+++ b/scriptorium/widgets/meson.build
@@ -3,6 +3,7 @@ scriptorium_sources_widgets = [
 	'chapter_column.py',
 	'manuscript.py',
 	'scene.py',
+	'chapter.py',
 	'multiline_entry_row.py',
 ]
 install_data(scriptorium_sources_widgets, install_dir: moduledir / 'widgets')
