--- a/scriptorium/dialogs/meson.build
+++ b/scriptorium/dialogs/meson.build
@@ -1,6 +1,7 @@
 scriptorium_dialog_sources = [
 	'__init__.py',
 	'dialog_add.py',
+	'select_scenes.py',
 	'writer.py',
 ]
 install_data(scriptorium_dialog_sources, install_dir: moduledir / 'dialogs')
