More work on entities and fix chapter details
It's not possible to drop a scene from a chapter again, and the approach around entities has been simplified to a single type (for now)

--- a/scriptorium/meson.build
+++ b/scriptorium/meson.build
@@ -47,6 +47,7 @@ blueprints = custom_target(
 		'views/editor_formatting.blp',
 		'views/editor_manuscript.blp',
 		'views/editor_entities.blp',
+		'views/editor_entities_details.blp',
 
 		'widgets/chapter_column.blp',
 		'widgets/scene.blp',
