Done with the entities for now
Feature fully working, let's move on!

--- a/scriptorium/dialogs/meson.build
+++ b/scriptorium/dialogs/meson.build
@@ -2,6 +2,7 @@ scriptorium_dialog_sources = [
 	'__init__.py',
 	'dialog_add.py',
 	'select_scenes.py',
+	'select_entities.py',
 	'writer.py',
 ]
 install_data(scriptorium_dialog_sources, install_dir: moduledir / 'dialogs')
