--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 /.flatpak-builder
-/builddir
-token.txt
-/subprojects/blueprint-compiler
 /.var
 
-bprojects/libpanel-1
+/builddir
+token.txt
+
+/subprojects/blueprint-compiler
+/subprojects/libpanel-1
