Added dark mode! \o/
The most important feature of the decade :)

--- a/scriptorium/meson.build
+++ b/scriptorium/meson.build
@@ -57,6 +57,7 @@ blueprints = custom_target(
 		'widgets/manuscript.blp',
 		'widgets/multiline_entry_row.blp',
 		'widgets/cards_list.blp',
+		'widgets/theme_selector.blp',
 	),
 	output: '.',
 	command: [
