Make the data storage a bit more RDF-like
Hopefully, this will avoid having to implement complicated schema migrations later on

--- a/scriptorium/models/meson.build
+++ b/scriptorium/models/meson.build
@@ -6,5 +6,9 @@ scriptorium_models_sources = [
 	'scene.py',
 	'entity.py',
 	'commit_message.py',
+	'resource.py',
+	'project.py',
+	'image.py',
+	'link.py',
 ]
 install_data(scriptorium_models_sources, install_dir: moduledir / 'models')
