--- a/data/com.github.cgueret.Scriptorium.metainfo.xml.in
+++ b/data/com.github.cgueret.Scriptorium.metainfo.xml.in
@@ -11,7 +11,7 @@
   </description>
 
   <developer id="tld.vendor">
-    <name>Developer name</name>
+    <name>Christophe Gueret</name>
   </developer>
 
   <!-- Requered: Should be a link to the upstream homepage for the component -->
