--- a/data/com.github.cgueret.Scriptorium.metainfo.xml.in
+++ b/data/com.github.cgueret.Scriptorium.metainfo.xml.in
@@ -5,9 +5,9 @@
   <project_license>GPL-3.0-or-later</project_license>
 
   <name>Scriptorium</name>
-  <summary>Keep the summary shorter, between 10 and 35 characters</summary>
+  <summary>Write short stories, novels, or anything in between in an IDE for books.</summary>
   <description>
-    <p>No description</p>
+    <p>Scriptorium is a text editor coupled with a plotting tool and a formatting tool. The objective is to provide writers with a simple and complete environment to plan, plot, write and edit e-books.</p>
   </description>
 
   <developer id="tld.vendor">
@@ -15,59 +15,58 @@
   </developer>
 
   <!-- Requered: Should be a link to the upstream homepage for the component -->
-  <url type="homepage">https://example.org/</url>
+  <url type="homepage">https://github.com/cgueret/Scriptorium</url>
   <!-- Recommended: It is highly recommended for open-source projects to display the source code repository -->
-  <url type="vcs-browser">https://example.org/repository</url>
+  <url type="vcs-browser">https://github.com/cgueret/Scriptorium</url>
   <!-- Should point to the software's bug tracking system, for users to report new bugs -->
-  <url type="bugtracker">https://example.org/issues</url>
+  <url type="bugtracker">https://github.com/cgueret/Scriptorium/issues</url>
   <!-- Should link a FAQ page for this software, to answer some of the most-asked questions in detail -->
   <!-- URLs of this type should point to a webpage where users can submit or modify translations of the upstream project -->
-  <url type="translate">https://example.org/translate</url>
-  <url type="faq">https://example.org/faq</url>
+  <!--
+    <url type="translate">https://example.org/translate</url>
+    <url type="faq">https://example.org/faq</url>
+  -->
   <!--Sould provide a web link to an online user's reference, a software manual or help page -->
-  <url type="help">https://example.org/help</url>
+  <!--<url type="help">https://example.org/help</url>-->
   <!-- URLs of this type should point to a webpage showing information on how to donate to the described software project -->
-  <url type="donation">https://example.org/donate</url>
+  <!--<url type="donation">https://example.org/donate</url>-->
   <!--This could for example be an HTTPS URL to an online form or a page describing how to contact the developer -->
-  <url type="contact">https://example.org/contact</url>
+  <url type="contact">https://mastodon.green/@christophegueret</url>
   <!--URLs of this type should point to a webpage showing information on how to contribute to the described software project -->
-  <url type="contribute">https://example.org/contribute</url>
+  <!--<url type="contribute">https://example.org/contribute</url>-->
 
   <translation type="gettext">scriptorium</translation>
   <!-- All graphical applications having a desktop file must have this tag in the MetaInfo.
      If this is present, appstreamcli compose will pull icons, keywords and categories from the desktop file. -->
   <launchable type="desktop-id">com.github.cgueret.Scriptorium.desktop</launchable>
   <!-- Use the OARS website (https://hughsie.github.io/oars/generate.html) to generate these and make sure to use oars-1.1 -->
-  <content_rating type="oars-1.1" />
+  <content_rating type="oars-1.1"/>
 
   <!-- Applications should set a brand color in both light and dark variants like so -->
   <branding>
-    <color type="primary" scheme_preference="light">#ff00ff</color>
-    <color type="primary" scheme_preference="dark">#993d3d</color>
+    <!-- Two different shades of brown to refer to the color of a scriptorium desk -->
+    <color type="primary" scheme_preference="light">#865e3c</color>
+    <color type="primary" scheme_preference="dark">#cdab8f</color>
   </branding>
 
   <screenshots>
     <screenshot type="default">
       <image>https://example.org/example1.png</image>
-      <caption>A caption</caption>
-    </screenshot>
-    <screenshot>
-      <image>https://example.org/example2.png</image>
-      <caption>A caption</caption>
+      <caption>Main window</caption>
     </screenshot>
   </screenshots>
 
   <releases>
-    <release version="1.0.1" date="2024-01-18">
+    <release version="0.1.0" date="2025-05-28">
       <url type="details">https://example.org/changelog.html#version_1.0.1</url>
       <description translate="no">
         <p>Release description</p>
         <ul>
-          <li>List of changes</li>
-          <li>List of changes</li>
+          <li>First public release of the code</li>
         </ul>
       </description>
     </release>
   </releases>
 
 </component>
+
