--- a/data/com.github.cgueret.Scriptorium.metainfo.xml.in
+++ b/data/com.github.cgueret.Scriptorium.metainfo.xml.in
@@ -43,7 +43,7 @@
   <!--Sould provide a web link to an online user's reference, a software manual or help page -->
   <!--<url type="help">https://example.org/help</url>-->
   <!-- URLs of this type should point to a webpage showing information on how to donate to the described software project -->
-  <!--<url type="donation">https://example.org/donate</url>-->
+  <url type="donation">https://buymeacoffee.com/cgueret</url>
   <!--This could for example be an HTTPS URL to an online form or a page describing how to contact the developer -->
   <url type="contact">https://mastodon.green/@christophegueret</url>
   <!--URLs of this type should point to a webpage showing information on how to contribute to the described software project -->
@@ -65,14 +65,34 @@
 
   <screenshots>
     <screenshot type="default">
-      <image>https://example.org/example1.png</image>
+      <image>https://raw.githubusercontent.com/cgueret/Scriptorium/refs/heads/main/data/screenshots/main_window.png</image>
       <caption>Main window</caption>
+    </screenshot>
+    <screenshot>
+      <image>https://raw.githubusercontent.com/cgueret/Scriptorium/refs/heads/main/data/screenshots/library.png</image>
+      <caption>Library for managing different manuscripts</caption>
+    </screenshot>
+    <screenshot>
+      <image>https://raw.githubusercontent.com/cgueret/Scriptorium/refs/heads/main/data/screenshots/overview.png</image>
+      <caption>Use overview mode to drag and drop content</caption>
+    </screenshot>
+    <screenshot>
+      <image>https://raw.githubusercontent.com/cgueret/Scriptorium/refs/heads/main/data/screenshots/scenes.png</image>
+      <caption>Get a list of all your scenes, including those not included in the manuscript draft</caption>
+    </screenshot>
+    <screenshot>
+      <image>https://raw.githubusercontent.com/cgueret/Scriptorium/refs/heads/main/data/screenshots/scene_details.png</image>
+      <caption>Use the scene details editor to assign story elements</caption>
+    </screenshot>
+    <screenshot>
+      <image>https://raw.githubusercontent.com/cgueret/Scriptorium/refs/heads/main/data/screenshots/dark_mode.png</image>
+      <caption>Switch to dark more, if you want to, when editing the content of a scene</caption>
     </screenshot>
   </screenshots>
 
   <releases>
     <release version="0.1.0" date="2025-05-28">
-      <url type="details">https://example.org/changelog.html#version_1.0.1</url>
+      <url type="details">https://github.com/cgueret/Scriptorium/commits/v0.1.0</url>
       <description translate="no">
         <p>Release description</p>
         <ul>
