--- a/data/io.github.cgueret.Scriptorium.desktop.in
+++ b/data/io.github.cgueret.Scriptorium.desktop.in
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Name=scriptorium
 Exec=scriptorium
-Icon=com.github.cgueret.Scriptorium
+Icon=io.github.cgueret.Scriptorium
 Terminal=false
 Type=Application
 Categories=Utility;
