--- a/data/io.github.cgueret.Scriptorium.service.in
+++ b/data/io.github.cgueret.Scriptorium.service.in
@@ -1,3 +1,3 @@
 [D-BUS Service]
-Name=com.github.cgueret.Scriptorium
+Name=io.github.cgueret.Scriptorium
 Exec=@bindir@/scriptorium --gapplication-service
