--- a/data/io.github.cgueret.Scriptorium.metainfo.xml.in
+++ b/data/io.github.cgueret.Scriptorium.metainfo.xml.in
@@ -70,6 +70,16 @@
   </screenshots>
 
   <releases>
+    <release version="0.2.0" date="2025-05-31">
+      <url type="details">https://github.com/cgueret/Scriptorium/commits/v0.2.0</url>
+      <description translate="no">
+        <p>Release description</p>
+        <ul>
+          <li>Added startup screen</li>
+          <li>Fixed bug where icons would not re-style</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.1.0" date="2025-05-28">
       <url type="details">https://github.com/cgueret/Scriptorium/commits/v0.1.0</url>
       <description translate="no">
