--- a/data/io.github.cgueret.Scriptorium.metainfo.xml.in
+++ b/data/io.github.cgueret.Scriptorium.metainfo.xml.in
@@ -66,6 +66,15 @@
   </screenshots>
 
   <releases>
+    <release version="0.2.1" date="2025-06-02">
+      <url type="details">https://github.com/cgueret/Scriptorium/commits/v0.2.1</url>
+      <description translate="no">
+        <p>Release description</p>
+        <ul>
+          <li>Fixed metadata for Flatpak</li>
+        </ul>
+      </description>
+    </release>
     <release version="0.2.0" date="2025-05-31">
       <url type="details">https://github.com/cgueret/Scriptorium/commits/v0.2.0</url>
       <description translate="no">
