--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -43,7 +43,7 @@ jobs:
       - name: 📦 Install Python dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pyinstaller
+          pip install pyinstaller PyGObject
 
       - name: 📦 Install Blueprint Compiler
         run: |
