--- a/.github/workflows/macos-build.yml
+++ b/.github/workflows/macos-build.yml
@@ -55,6 +55,7 @@ jobs:
 
       - name: ⚙️ Build app with Meson
         run: |
+          export DYLD_LIBRARY_PATH="/opt/homebrew/lib:$DYLD_LIBRARY_PATH"
           meson setup builddir --prefix=${PWD}/install
           meson compile -C builddir
           meson install -C builddir
