Added code to embed and start LanguageTool
Will try to connect to a server running on the expected port. This makes it possible to connect, for instance, with an instance managed by Eloquent

--- a/scriptorium/meson.build
+++ b/scriptorium/meson.build
@@ -21,9 +21,11 @@ configure_file(
 scriptorium_sources = [
 	'__init__.py',
 	'main.py',
+	'application.py',
 	'window.py',
 	'utils.py',
 	'globals.py',
+	'language_tool.py',
 ]
 install_data(scriptorium_sources, install_dir: moduledir)
 
