Implementation with popover

--- a/scriptorium/meson.build
+++ b/scriptorium/meson.build
@@ -60,6 +60,7 @@ blueprints = custom_target(
 		'widgets/multiline_entry_row.blp',
 		'widgets/cards_list.blp',
 		'widgets/theme_selector.blp',
+		'widgets/writer_popover.blp',
 	),
 	output: '.',
 	command: [
