--- a/scriptorium/widgets/meson.build
+++ b/scriptorium/widgets/meson.build
@@ -8,5 +8,6 @@ scriptorium_sources_widgets = [
 	'cards_list.py',
 	'entity_card.py',
 	'theme_selector.py',
+	'writer_popover.py',
 ]
 install_data(scriptorium_sources_widgets, install_dir: moduledir / 'widgets')
