--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,14 @@
-/.flatpak-builder
+.flatpak/flatpak-builder
 /.var
 
 /builddir
 token.txt
+_build
 
 /subprojects/blueprint-compiler
 /subprojects/libpanel-1
 notes.md
+
+.vscode
 
 repo/
