First semi working code

--- a/scriptorium/dialogs/meson.build
+++ b/scriptorium/dialogs/meson.build
@@ -4,5 +4,6 @@ scriptorium_dialog_sources = [
 	'select_scenes.py',
 	'select_entities.py',
 	'writer.py',
+	'preferences.py'
 ]
 install_data(scriptorium_dialog_sources, install_dir: moduledir / 'dialogs')
