--- a/scriptorium/widgets/meson.build
+++ b/scriptorium/widgets/meson.build
@@ -9,5 +9,6 @@ scriptorium_sources_widgets = [
 	'entity_card.py',
 	'theme_selector.py',
 	'annotation.py',
+	'text_view.py',
 ]
 install_data(scriptorium_sources_widgets, install_dir: moduledir / 'widgets')
